# morphe

./: .gitignore  BACKPORTING_TESTS_TO_FREECAD.md  CONTRIBUTING.md  PROPOSED_MCP_OPERATIONS.md  README.md  SPECIFICATION.md  demo.py  demo_rpc.py  progress-20260315.md  progress-20260426.md  pyproject.toml
.github/workflows/: cpp.yml  publish.yml  test.yml
adapter_common/: client.py
adapter_freecad/: __init__.py  adapter.py  client.py  server.py  vertex_map.py
adapter_fusion/: __init__.py  adapter.py  client.py  server.py  vertex_map.py
adapter_fusion/addin/MorpheServer/: MorpheServer.py
adapter_fusion/script/MorpheTests/: MorpheTests.py
adapter_inventor/: __init__.py  adapter.py  client.py  server.py  vertex_map.py
adapter_solidworks/: __init__.py  adapter.py  client.py  server.py  vertex_map.py
core/: __init__.py
cpp/: CMakeLists.txt  README.md
cpp/include/morphe/: constraints.hpp  document.hpp  morphe.hpp  primitives.hpp  serialization.hpp  types.hpp  validation.hpp
cpp/src/: constraints.cpp  serialization.cpp  validation.cpp
cpp/tests/: test_conformance.cpp  test_constraints.cpp  test_document.cpp  test_primitives.cpp  test_serialization.cpp  test_smoke.cpp  test_types.cpp  test_validation.cpp
morphe/: constraints.py  document.py  primitives.py  serialization.py  validation.py
morphe/adapters/: __init__.py
morphe/adapters/freecad/: adapter.py
morphe/adapters/fusion/: adapter.py
morphe/adapters/fusion/script/MorpheTests/: README.md
morphe/adapters/inventor/: adapter.py  vertex_map.py
morphe/adapters/solidworks/: adapter.py
sketch_adapter_common/: client.py
sketch_adapter_freecad/: __init__.py  adapter.py  client.py  server.py  vertex_map.py
sketch_adapter_fusion/: __init__.py  adapter.py  client.py  server.py  vertex_map.py
sketch_adapter_fusion/addin/: setup_addin.py
sketch_adapter_fusion/addin/CanonicalSketchServer/: CanonicalSketchServer.py
sketch_adapter_fusion/script/CanonicalSketchTests/: CanonicalSketchTests.py
sketch_adapter_fusion/test_scripts/: README.md  test_roundtrip.py
sketch_adapter_inventor/: __init__.py  adapter.py  client.py  server.py  vertex_map.py
sketch_adapter_solidworks/: COM_QUIRKS.md  __init__.py  adapter.py  client.py  server.py  vertex_map.py
sketch_canonical/: __init__.py  adapter.py  constraints.py  document.py  primitives.py  serialization.py  types.py  validation.py
tests/: __init__.py  test_adapters.py  test_conformance_corpus.py  test_freecad_roundtrip.py  test_inventor_roundtrip.py  test_schema.py  test_solidworks_roundtrip.py
tests/conformance/: README.md  all_constraint_types.json  all_primitives.json  construction_geometry.json  elliptical_arc_full.json  empty.json  generate_corpus.py  inferred_constraints.json  point_refs_full.json  rounded_rect.json  spline_periodic.json  spline_with_weights.json
