[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sketch-canonical"
version = "0.1.0"
description = "CAD-agnostic representation for 2D sketch geometry and constraints"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Computer Aided Design (CAD)",
]
keywords = ["cad", "sketch", "geometry", "constraints", "freecad", "solidworks", "fusion360"]
authors = [
    {name = "Alan", email = "alan@codereclaimers.com"}
]

[project.urls]
Homepage = "https://github.com/codereclaimers/canonical_sketch"
Repository = "https://github.com/codereclaimers/canonical_sketch"
Issues = "https://github.com/codereclaimers/canonical_sketch/issues"
Documentation = "https://github.com/codereclaimers/canonical_sketch/blob/main/SPECIFICATION.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["sketch_canonical*", "sketch_adapter_common*", "sketch_adapter_freecad*", "sketch_adapter_fusion*", "sketch_adapter_inventor*", "sketch_adapter_solidworks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = [
    "E501",  # Line too long
    "N802",  # Function name should be lowercase (constraint constructors are intentionally PascalCase)
    "B027",  # Empty method in abstract base class (intentional default implementations)
]

[tool.ruff.lint.per-file-ignores]
"sketch_adapter_fusion/test_scripts/*.py" = ["E402"]  # Imports after path manipulation
"sketch_adapter_fusion/addin/*/*.py" = ["E402"]  # Imports after path setup for add-in
